# ibus-cangjie

./: .dockerignore  .gitignore  .travis.yml  AUTHORS  Dockerfile  INSTALL.md  INSTALL.rst  Makefile.am  README  README.md  README.rst  TODO  autogen.sh  configure.ac
.tx/: config
data/: Makefile.am  cangjie.appdata.xml.in  cangjie.xml.in  cangjie.xml.in.in  ibus-setup-cangjie.desktop.in  ibus-setup-cangjie.desktop.in.in  ibus-setup-quick.desktop.in.in  org.cangjians.ibus.cangjie.gschema.xml.in  org.cangjians.ibus.quick.gschema.xml.in  quick.appdata.xml.in  quick.xml.in.in  setup.ui
data/icons/: README.icons.md
hooks/: build
jhbuild/: README  ibus-cangjie.modules  jhbuildrc
po/: LINGUAS  Makevars  POTFILES.in  ibus-cangjie.pot  pt_BR.po  zh_CN.po  zh_HK.po  zh_TW.po
scripts/: ibus-engine-cangjie  ibus-engine-cangjie.in  ibus-setup-cangjie  ibus-setup-cangjie.in
setup/: Makefile.am  config.py.in  ibus-setup-cangjie.in  main.py  setup.ui
src/: Makefile.am  __init__.py  canberra.py  cangjie.xml.in.in  config.py  config.py.in  engine.py  factory.py  ibus-engine-cangjie.in  main.py  pycanberra.py  setup.py
src/setup/: __init__.py  ibus-setup-cangjie  setup.ui
tests/: run_tests.in  test_cangjie.py  test_prefs.py  test_quick.py
