# Point to our macro directory and pick up user flags from the environment
ACLOCAL_AMFLAGS  = -I m4 ${ACLOCAL_FLAGS}

# Keep recursive, the tools depend on it
SUBDIRS = po


# -- scripts/ ------------------------
bin_SCRIPTS = scripts/ibus-setup-cangjie

pkglibexec_SCRIPTS = scripts/ibus-engine-cangjie
libexecdir = $(prefix)/lib

scripts/ibus-%-cangjie: scripts/ibus-%-cangjie.in Makefile
	$(AM_V_GEN) \
	$(MKDIR_P) scripts; \
	sed -e 's&@PYTHON_PATH@&$(PYTHON)&g' \
	    -e 's&@CANGJIE_GETTEXT_PACKAGE@&$(GETTEXT_PACKAGE)&g' \
	    -e 's&@LOCALEDIR@&$(localedir)&g' \
	    -e 's&@COMPONENTDIR@&$(COMPONENT_DIR)&g' \
	    -e 's&@PKGDATADIR@&$(pkgdatadir)&g' $< > $@


# -- data/ ---------------------------
ibus_cangjie_data_DATA = data/setup.ui
ibus_cangjie_datadir = $(pkgdatadir)

component_DATA = \
	data/cangjie.xml \
	data/quick.xml \
	$(NULL)
componentdir = $(COMPONENT_DIR)

desktop_in_in_files = \
	data/ibus-setup-cangjie.desktop.in.in \
	data/ibus-setup-quick.desktop.in.in \
	$(NULL)
desktop_in_files = $(desktop_in_in_files:.desktop.in.in=.desktop.in)
desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
desktopdir = $(datadir)/applications
@INTLTOOL_DESKTOP_RULE@

%.xml: %.xml.in
	$(AM_V_GEN) \
	( \
		bindir=${bindir}; \
		pkglibexecdir=${pkglibexecdir}; \
		s=`cat $<`; \
		eval "echo \"$${s}\""; \
	) > $@

%.desktop.in: %.desktop.in.in
	$(AM_V_GEN) \
	( \
		bindir=${bindir}; \
		s=`cat $<`; \
		eval "echo \"$${s}\""; \
	) > $@


# -- src/ ----------------------------
ibus_cangjie_PYTHON = \
	src/__init__.py \
	src/config.py \
	src/engine.py \
	$(NULL)
ibus_cangjiedir = $(pythondir)/ibus_cangjie
nodist_ibus_cangjie_PYTHON = src/config.py

ibus_cangjie_setup_PYTHON = src/setup/__init__.py
ibus_cangjie_setupdir = $(ibus_cangjiedir)/setup


# -- Testing -------------------------
TESTS = tests/run_tests

tests/run_tests: tests/run_tests.in
	$(MKDIR_P) tests
	sed -e 's&@PYTHON_BIN@&$(PYTHON)&g' \
	    -e 's&@SRCDIR@&$(srcdir)&g' $< > $@
	chmod +x $@


# -- Common --------------------------
AUTHORS:
	@if test -d "$(srcdir)/.git"; then \
	    echo Creating $@ && \
	    ( cd "$(top_srcdir)" && \
	      echo -e '# Generated by Makefile. Do not edit.\n#'; \
	      echo -e '# IBus Cangjie was written by these people:\n'; \
	      git log --no-merges --pretty=format:"%an <%ae>" \
	          | sort | uniq ) > $@.tmp && mv -f $@.tmp $@ \
	    || ( rm -f $@.tmp ; echo Failed to generate $@ >&2 ); \
	fi

CLEANFILES = \
	data/cangjie.xml \
	data/cangjie.xml.in \
	data/quick.xml \
	data/quick.xml.in \
	$(desktop_DATA) \
	$(desktop_in_files) \
	scripts/ibus-engine-cangjie \
	scripts/ibus-setup-cangjie \
	src/*.pyc \
	src/setup/*.pyc \
	tests/run_tests \
	$(NULL)

EXTRA_DIST = \
	autogen.sh \
	data/setup.ui \
	$(desktop_in_in_files) \
	scripts/ibus-engine-cangjie.in \
	scripts/ibus-setup-cangjie.in \
	tests/run_tests.in \
	tests/__init__.py \
	$(wildcard $(srcdir)/tests/test_*.py) \
	$(NULL)

.PHONY: AUTHORS
